--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,10 +11,9 @@
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@300;400;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
   <!-- External Stylesheet -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <title>Challenge Ch3 Avinska</title>
 </head>
 
@@ -58,29 +57,31 @@
     <!-- Main Page -->
     <section id="main-page" class="bg-style">
       <div class="mainpage">
-        <div class="mainpage-judul">
+        <div class="mainpage-judul mt-lg-5 pt-lg-5">
           <h1>PLAY TRADITIONAL GAME</h1>
-          <h3 class="subtitle pb-sm-4 pt-sm-4 pb-md-5 pt-md-5">Experience new traditional game play</h3>
-          <button type="button" class="btn btn-warning big-yellowy-button">PLAY NOW</button>
+          <h3 class="subtitle pb-sm-4 pt-sm-4 pb-lg-5 pt-lg-5">Experience new traditional game play</h3>
+          <a href="/register">
+            <button type="button" class="btn btn-warning big-yellowy-button">PLAY NOW</button>
+          </a>
         </div>
         <div class="justify-content-center align-items-center">
           <a href="#about" class="link-text">
             <p class="mb-2">THE STORY</p>
-            <img src="assets/scroll-down.svg" alt="" height="">
+            <img src="assets/mainpage/bg-img/scroll-down.svg">
           </a>
         </div>
       </div>
     </section>
-    <section class=""></section>
+
     <!-- About Page -->
     <!-- Carousel -->
     <section id="about" class="bg-style">
       <div class="about row">
-        <div class="col-md-4 judul">
+        <div class="col-md-12 col-xl-4 judul">
           <h3 class="subtitle">What's so special?</h3>
           <h2 class="big-title">THE GAMES</h2>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-12 col-xl-8">
           <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators rounded-circle">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -96,34 +97,33 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="assets/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
+                <img src="assets/mainpage/bg-img/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="assets/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
+                <img src="assets/mainpage/bg-img/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="assets/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
+                <img src="assets/mainpage/bg-img/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="assets/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
+                <img src="assets/mainpage/bg-img/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="assets/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
+                <img src="assets/mainpage/bg-img/rockpaperstrategy-1600.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <a class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
               data-bs-slide="prev">
-              <img src="assets/carousel/switch-right.svg" alt="">
+              <img src="assets/mainpage/carousel/switch-right.svg" alt="">
               <span class="visually-hidden">Previous</span>
             </a>
             <a class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
               data-bs-slide="next">
-              <img src="assets/carousel/switch-left.svg" alt="">
+              <img src="assets/mainpage/carousel/switch-left.svg" alt="">
               <span class="visually-hidden">Next</span>
             </a>
           </div>
         </div>
-        <!-- </div> -->
       </div>
     </section>
 
@@ -136,6 +136,7 @@
             <h3 class="subtitle">What's so special?</h3>
             <h2 class="big-title">FEATURES</h2>
           </div>
+
           <!-- Accordion -->
           <div class="accordion accordion-flush" id="accordionFlushExample">
             <div class="accordion-item">
@@ -190,7 +191,7 @@
       <div class="">
         <p class="system-req-top mini-text text-center">Can My Computer Run This Game?</p>
         <div class="row">
-          <div class="col-md-7 syst-req">
+          <div class="col-md-12 col-lg-5 syst-req">
             <p class="big-title">SYSTEM REQUIREMENTS</p>
             <div class="wrapper">
               <div class="item">
@@ -223,7 +224,7 @@
     <!-- Press Quotes -->
     <section id="press-quotes-container" class="bg-style">
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-4">
           <div class="top-scores-body">
             <h2 class="big-title">TOP SCORES</h2>
             <p class="context">This top score from various games provided on this platform
@@ -232,50 +233,50 @@
               more</button>
           </div>
         </div>
-        <div class="col-lg-6 cards-container">
-          <div class="card offset-sm-2 mb-3" style="width: 25rem;">
+        <div class="col-lg-8 cards-container">
+          <div class="card offset-sm-2 offset-md-3 offset-lg-5 mb-3" style="width: 25rem;">
             <div class="card-body">
               <div class="card-avatar card-item">
-                <img src="assets/card/lathi.png" class="rounded-circle" alt="a reviewer profile picture">
+                <img src="assets/mainpage/card/lathi.png" class="rounded-circle" alt="a reviewer profile picture">
               </div>
               <div class="card-profile card-item">
                 <h5 class="title">Evan Lahti</h5>
                 <span class="context">PC Gamer</span>
               </div>
               <div class="card-item">
-                <img src="assets/card/twitter.svg">
+                <img src="assets/mainpage/card/twitter.svg">
               </div>
               <p class="card-text context">"One of my gaming highlights of the year."</p>
               <span class="card-date mini-text">June 18, 2021</span>
             </div>
           </div>
-          <div class="card offset-sm-2 mb-3" style="width: 25rem;">
+          <div class="card offset-sm-2 offset-md-3 mb-3" style="width: 25rem;">
             <div class="card-body">
               <div class="card-avatar card-item">
-                <img src="assets/card/griffin.png" class="rounded-circle" alt="a reviewer profile picture">
+                <img src="assets/mainpage/card/griffin.png" class="rounded-circle" alt="a reviewer profile picture">
               </div>
               <div class="card-profile card-item">
                 <h5 class="title">Jada Griffin</h5>
                 <span class="context">Nerdreactor</span>
               </div>
               <div class="card-item">
-                <img src="assets/card/twitter.svg">
+                <img src="assets/mainpage/card/twitter.svg">
               </div>
               <p class="card-text context">"The next big thing in the world of streaming and survival games."</p>
               <span class="card-date mini-text">July 10, 2021</span>
             </div>
           </div>
-          <div class="card offset-sm-2" style="width: 25rem;">
+          <div class="card offset-sm-2 offset-md-3 offset-lg-4" style="width: 25rem;">
             <div class="card-body">
               <div class="card-avatar card-item">
-                <img src="assets/card/williams.png" class="rounded-circle" alt="a reviewer profile picture">
+                <img src="assets/mainpage/card/williams.png" class="rounded-circle" alt="a reviewer profile picture">
               </div>
               <div class="card-profile card-item">
                 <h5 class="title">Aaron Williams</h5>
                 <span class="context">Uproxx</span>
               </div>
               <div class="card-item">
-                <img src="assets/card/twitter.svg">
+                <img src="assets/mainpage/card/twitter.svg">
               </div>
               <p class="card-text context">"Snoop Dogg Playing The Wildly Entertaining 'SOS' is Ridiculous."</p>
               <span class="card-date mini-text">December 24, 2018</span>
@@ -290,9 +291,9 @@
       <div class="row">
         <div class="col-md-4 col-lg-5"></div>
         <div class="col-md-8 col-lg-7">
-          <div class="newsletter-content mt-sm-5 pt-sm-5 mt-lg-2 pt-lg-2">
-            <h3 class="subtitle">Want to stay in touch?</h3>
-            <h2 class="big-title">NEWSLETTER SUBSCRIBE</h2>
+          <div class="newsletter-content">
+            <h3 class="subtitle mt-5">Want to stay in touch?</h3>
+            <h2 class="big-title">NEWSLETTER <br> SUBSCRIBE</h2>
             <p class="context newsletter-p">In order to start receiving our news, all you have to do is enter your email
               address. Everything else will be taken care of by us. We will send you emails containing information about
               the game. We don't spam.</p>
@@ -332,11 +333,14 @@
           <a class="nav-link p-2 link-text" href="#system-requirements">system requirements</a>
         </li>
         <li class="nav justify-content-center">
-          <a href="#" class="p-2 nav-link link-text"><img class="icon" src="assets/newsletter/twitter-full.svg"
+          <a href="#" class="p-2 nav-link link-text"><img class="icon" src="assets/mainpage/newsletter/twitter-full.svg"
               alt=""></a>
-          <a href="#" class="p-2 nav-link link-text"><img class="icon" src="assets/newsletter/facebook.svg" alt=""></a>
-          <a href="#" class="p-2 nav-link link-text"><img class="icon" src="assets/newsletter/Vector.svg" alt=""></a>
-          <a href="#" class="p-2 nav-link link-text"><img class="icon" src="assets/newsletter/twitch.svg" alt=""></a>
+          <a href="#" class="p-2 nav-link link-text"><img class="icon" src="assets/mainpage/newsletter/facebook.svg"
+              alt=""></a>
+          <a href="#" class="p-2 nav-link link-text"><img class="icon" src="assets/mainpage/newsletter/Vector.svg"
+              alt=""></a>
+          <a href="#" class="p-2 nav-link link-text"><img class="icon" src="assets/mainpage/newsletter/twitch.svg"
+              alt=""></a>
         </li>
       </ul>
 
